--- a/maint/todo
+++ b/maint/todo
@@ -1,5 +1,8 @@
+- always return exactly one line for add command, change scripts to filter it if they want
+- when more output follows, use e.g. "100- added"
+- removing in simple mode doesn't quite work; still return in queries?
+- don't write anything in mode_alter if not modified
 - queue mode_alter writes, don't touch file until ::save is called, then do it all at once
 - switch backend to GD from ImageMagick
 - instead of not ignoring MD5, change to always change MD5+tag like now, no need to check ignbase
 - fix dupe finder
-- option to query image resolution (and other info?) for querying *booru thumbs that are (probably) in the DB
