--- a/README
+++ b/README
@@ -56,10 +56,13 @@ the first argument being dbid=0. Commands of particular interest are:
 		it needs to read in the entire database.
 		(As a special feature, `iqdb rehash foo.db' can
 		be used to upgrade an old version of the DB.)
-	done now
+	done
 		Quit and save all databases to their original file.
-	quit now
+	quit
 		Quit and save all databases to their original file.
+
+The maintenance commands (see listen mode below) are also supported in
+command mode, but perhaps not very useful here.
 
 Changes are automatically saved in the original file upon EOF on stdin,
 or when sending the "done now" or "quit now" commands.
@@ -82,6 +85,12 @@ then terminate that instance, to reduce the downtime while loading the
 databases (and to leave the old server running in the rare case that it
 should crash while starting up).
 
+$ iqdb listen2 [IP:]port [-r] foo.db bar.db baz.db
+
+Same as above, but listens on the given port and one port below it (i.e.
+if port 5588 is specified, also listens on 5587). The lower port is higher
+priority and all pending requests are serviced before the other port.
+
 Of particular interest are the following commands:
 
 	query <dbid> <flags> <numres> <filename>
@@ -90,7 +99,7 @@ Of particular interest are the following commands:
 			0 = normal operation
 			1 = file contains a sketch, use different weights
 			2 = force grayscale match, discard color information
-			8 = consider image width:height as set ID instead and
+			8 = consider image width as set ID instead and
 			    return only the best match for each set
 			16= discard common coefficients (those present in at
 			    least 10% of all images), this finds a
@@ -103,10 +112,47 @@ Of particular interest are the following commands:
 		in different databases (the noise level depends on the number
 		of images in the DB and how self-similar they are).
 
+	query_opt <option> <arguments...>
+		Set advanced options for the next query. Options are reset after
+		the next query or multi_query command. Available options are:
+		mask <and> <xor>
+			Consider image height as bitmask and only return images
+			for which ((bitmask & and) ^ xor) == 0. In other words,
+			for each bit that is set in "and", the image mask's bit
+			must match that of the "xor" mask. This can be used to
+			limit search results to given rating masks for example.
+
 The "add" and "remove" commands are now supported as well, however they
 only modify the memory representation of the DB and cannot be saved back
 to disk later. They allow you to update the server without restarting it
 but require that you also update the DB file directly.
+
+Additionally, since version 20081123 the listen mode also supports DB
+maintenance commands. In two-port mode these will only be accepted on
+the lower (high-priority) port.
+
+	load <dbid> <mode> <filename>
+		Loads the given DB file into the given dbid (which must not
+		be in use yet). The mode can be one of the following:
+			simple	default listen mode, supports fast queries
+				as well as adding/removing images
+			read_only requires more memory but supports image
+				ID queries (needed for duplicate finding)
+			alter	default command mode, supports fast updates
+				of DB files but no queries
+			normal	full functionality but requires much memory
+				and has slow queries, mainly useful for
+				upgrading old DB versions
+
+	drop <dbid>
+		Drops the given database. With drop and load commands in the
+		same connection, a database will be reloaded or replaced
+		atomically, however the server will be blocked until loading
+		is complete. When loading a large DB it is recommended to
+		start a new copy of the server with the -r option instead.
+
+	db_list
+		Lists all loaded databases with dbid and filename.
 
 The server has the following possible responses:
 
@@ -117,6 +163,8 @@ The server has the following possible responses:
 		General informational message.
 	101 <key>=<value>
 		Specific parseable information.
+	102 <dbid> <filename>
+		Response to db_list command.
 	200 <imgid> <score> <width> <height>
 		Query result.
 	201 <dbid> <imgid> <score> <width> <height>
@@ -126,8 +174,8 @@ The server has the following possible responses:
 	300 <text>
 		General error message.
 	301 <exception> <description>
-		Non-fatal error message (e.g. invalid image ID, or unreadable
-		image file)
+		Non-fatal error message (e.g. invalid image ID, or
+		unreadable image file)
 	302 <exception> <description>
 		Fatal error message (e.g. corrupted database)
 
