--- a/README
+++ b/README
@@ -76,16 +76,23 @@ b) Server mode
 In query server mode, iqdb loads the databases into memory in read-only mode
 to allow the fastest image queries. No database modifications are possible.
 
-$ iqdb listen [IP:]port [-r] foo.db bar.db baz.db
+$ iqdb listen [IP:]port [-r] [-d=<debuglevel>] [-s<IP/host>...] foo.db bar.db baz.db
 
 Listens on the given IP:port (default localhost if no IP given) for commands,
 after loading the given databases. If -r is specified and the port is
 currently in use by another instance of iqdb, it will load the database and
 then terminate that instance, to reduce the downtime while loading the
 databases (and to leave the old server running in the rare case that it
-should crash while starting up).
+should crash while starting up). The debug level may be set with -d.
+The -s option allows limiting iqdb queries to the given source IPs. This
+is useful if you cannot bind iqdb to localhost, for instance because the
+query script and iqdb run on different hosts. Then you can limit iqdb
+requests to the host where the script is running. Note that you should
+probably also specify "-s<host-IP>" with the IP as given to the listen
+argument, to allow requests from the local host, for instance to add images
+to the database and to make the -r option work.
 
-$ iqdb listen2 [IP:]port [-r] foo.db bar.db baz.db
+$ iqdb listen2 [IP:]port [options...] foo.db bar.db baz.db
 
 Same as above, but listens on the given port and one port below it (i.e.
 if port 5588 is specified, also listens on 5587). The lower port is higher
@@ -94,7 +101,9 @@ priority and all pending requests are serviced before the other port.
 Of particular interest are the following commands:
 
 	query <dbid> <flags> <numres> <filename>
-		Find numres images most similar to given filename.
+		Find numres images most similar to given filename. If the
+		filename starts with ':', use e.g. "./filename" to disambiguate
+		it from the literal image data query below.
 		Flags is a bitmask:
 			0 = normal operation
 			1 = file contains a sketch, use different weights
@@ -106,7 +115,15 @@ Of particular interest are the following commands:
 			    near-identical match much faster but the
 			    non-matching images have less similarity
 
+	query <dbid> <flags> <numres> <:size>
+		As above, but if the filename argument starts with ':', the
+		given number of bytes of literal image data starts on the next
+		line after the command. This allows querying without first
+		writing the image data to a file, and to query images that don't
+		locally exist on the host running the iqdb server.
+
 	multi_query <dbid> <flags> <numres> [+ <dbid2> <flags2> <numres2> +...] <filename>
+	multi_query <dbid> <flags> <numres> [+ <dbid2> <flags2> <numres2> +...] <:size>
 		Merge query results from multiple databases. This adjusts the
 		individual scores to deal with varying similarity noise levels
 		in different databases (the noise level depends on the number
@@ -121,6 +138,10 @@ Of particular interest are the following commands:
 			for each bit that is set in "and", the image mask's bit
 			must match that of the "xor" mask. This can be used to
 			limit search results to given rating masks for example.
+		mindev <min.std.dev.>
+			Return only results that are the given standard deviation
+			above the noise level. Nothing is returned if there are
+			no relevant results at all.
 
 The "add" and "remove" commands are now supported as well, however they
 only modify the memory representation of the DB and cannot be saved back
@@ -183,4 +204,29 @@ The server has the following possible responses:
 
 The file iqdb.php holds sample PHP code to connect to a running iqdb server
 and queries it for similar images.
+
+4) Converting
+
+Since version 20090612, iqdb will automatically detect the integer sizes
+used for writing a given image database. It will automatically convert them
+to its internal format on reading. Writing a non-native image database is
+not possible.
+
+This version also by default is compiled in 64-bit mode to make the image
+database file platform-independent.
+
+It is possible, but not recommended however, to have iqdb convert an image
+database of an older version into this new platform-independent format. It's
+better to rebuild the database from scratch. If you do want to convert the
+database, first make a backup of it, in case the conversion should fail.
+Then run "iqdb rehash <db-file>".
+
+If you haven't turned off debugging, this should output the following:
+	Loading db (converting data sizes)...
+	Database loaded from <db-file>, has <num> images.
+After loading, it will save the database again in the platform-independent
+format. Pay particular attention to the number of images it reports. If
+this isn't the number you expect, the conversion probably didn't work. In
+that case you will have to rebuild the database from scratch using the
+new version.
 
